--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest --watch"
 	},
 	"dependencies": {
 		"autoprefixer": "10.4.14",
@@ -19,5 +20,12 @@
 		"react-dom": "18.2.0",
 		"tailwindcss": "3.3.2",
 		"zustand": "^4.3.8"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"cypress": "^12.13.0",
+		"jest": "^29.5.0",
+		"jest-environment-jsdom": "^29.5.0"
 	}
 }
